# mail-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: web-kanban-plan.md
src/mail_bot/: __main__.py  config.py  db.py  formatters.py  gmail.py  llm.py  models.py  records.py  redaction.py  service.py  telegram_app.py  time_utils.py  webapp.py
src/mail_bot/web/static/: app.css  app.js
src/mail_bot/web/templates/: _board_columns.html  base.html  board.html  event.html  login.html
tests/: test_db.py  test_formatters.py  test_gmail.py  test_llm_json.py  test_redaction.py  test_service.py  test_telegram_auth.py  test_web.py
